Modification in api documentation and added search api
